--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">youtube_background_03</string>
+    <string name="menu_search">search</string>
 </resources>
