--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">youtube_background_03</string>
     <string name="menu_search">search</string>
+    <string name="menu_setting">setting</string>
 </resources>
